--- a/content/Wink(W13).html
+++ b/content/Wink(W13).html
@@ -2,7 +2,7 @@
         <head>
         <title>cad2021 homework site</title>
         <meta charset="utf-8">
-<meta property="head" content="H2">
+<meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='歡迎來到我的網站!!.html'>歡迎來到我的網站!!</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='hwpages.html'>hwpages</a><li><a href='githubpage.html'>githubpage</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='INVENTOR 繪圖.html'>INVENTOR 繪圖</a><ul class='dropdown'><li><a href='Inventor 安裝配置.html'>Inventor 安裝配置</a><li><a href='Inventor 操作流程.html'>Inventor 操作流程</a></li></ul><li class='has-children'><a href='Onshape 繪圖.html'>Onshape 繪圖</a><ul class='dropdown'><li><a href='CAD2 安裝配置.html'>CAD2 安裝配置</a><li><a href='CAD2 操作流程.html'>CAD2 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a><li><a href='W13.html'>W13</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a><li><a href='Run.html'>Run</a></li>
+                     <li><a href='歡迎來到我的網站!!.html'>歡迎來到我的網站!!</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='hwpages.html'>hwpages</a><li><a href='githubpage.html'>githubpage</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='INVENTOR 繪圖.html'>INVENTOR 繪圖</a><ul class='dropdown'><li><a href='Inventor 安裝配置.html'>Inventor 安裝配置</a><li><a href='Inventor 操作流程.html'>Inventor 操作流程</a></li></ul><li class='has-children'><a href='Onshape 繪圖.html'>Onshape 繪圖</a><ul class='dropdown'><li><a href='CAD2 安裝配置.html'>CAD2 安裝配置</a><li><a href='CAD2 操作流程.html'>CAD2 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a></li></ul><li><a href='Wink(W13).html'>Wink(W13)</a><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a><li><a href='Run.html'>Run</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">運動場景 << <a href='運動場景.html'>Previous</a> <a href='HW1-1.html'>Next</a> >> HW1-1<br /><h1>W13</h1>
+    <div id="tipue_search_content">運動場景 << <a href='運動場景.html'>Previous</a> <a href='HW1-1.html'>Next</a> >> HW1-1<br /><h1>Wink(W13)</h1>
+<p>先用wink錄製影片，將兩套程式的零件組繪圖進度紀錄進去</p>
+<p>再來用老師所提供的原始碼，並更改一下內容，將影片改成自己想要的名稱，上傳到倉儲上</p>
 <p></p>
 <script>
 var winkVideoData = {
