--- a/content/onshape安裝配置.html
+++ b/content/onshape安裝配置.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='歡迎來到我的網站!!.html'>歡迎來到我的網站!!</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='hwpages.html'>hwpages</a><li><a href='githubpage.html'>githubpage</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='INVENTOR 繪圖.html'>INVENTOR 繪圖</a><ul class='dropdown'><li><a href='Inventor 安裝配置.html'>Inventor 安裝配置</a><li><a href='Inventor 操作流程.html'>Inventor 操作流程</a></li></ul><li class='has-children'><a href='Onshape 繪圖.html'>Onshape 繪圖</a><ul class='dropdown'><li><a href='CAD2 安裝配置.html'>CAD2 安裝配置</a><li><a href='CAD2 操作流程.html'>CAD2 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a></li></ul><li><a href='Wink(W13).html'>Wink(W13)</a><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a><li><a href='Run.html'>Run</a></li>
+                     <li><a href='歡迎來到我的網站!!.html'>歡迎來到我的網站!!</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='hwpages.html'>hwpages</a><li><a href='githubpage.html'>githubpage</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='INVENTOR 繪圖.html'>INVENTOR 繪圖</a><ul class='dropdown'><li><a href='Inventor 安裝配置.html'>Inventor 安裝配置</a><li><a href='Inventor 操作流程.html'>Inventor 操作流程</a></li></ul><li class='has-children'><a href='Onshape 繪圖.html'>Onshape 繪圖</a><ul class='dropdown'><li><a href='onshape安裝配置.html'>onshape安裝配置</a><li><a href='CAD2 操作流程.html'>CAD2 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a></li></ul><li><a href='Wink(W13).html'>Wink(W13)</a><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a><li><a href='Run.html'>Run</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,12 +139,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Onshape 繪圖 << <a href='Onshape 繪圖.html'>Previous</a> <a href='CAD2 操作流程.html'>Next</a> >> CAD2 操作流程<br /><h1>CAD2 安裝配置</h1>
-<p>CAD2 指各學員所分配到的第二套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</p>
+    <div id="tipue_search_content">Onshape 繪圖 << <a href='Onshape 繪圖.html'>Previous</a> <a href='CAD2 操作流程.html'>Next</a> >> CAD2 操作流程<br /><h1>onshape安裝配置</h1>
+<p>我被分配到第二個程式是onshape，這個程式並不用下載，可直接上網查詢onshape，點開第一個網頁，並且註冊帳號，便可以直接使用，裡面的工具並非其他程式繁雜，所以可以很快上手，而且可以直接匯入DXF檔(先用CAD畫出零件草圖在存成DXF檔這樣就可以了)，再來按下擠出，並且擠到所要的尺寸，便完成需要的零件檔。</p>
 <p>CAD2 套件下載安裝與配置</p>
 <p>CAD2 套件下載安裝與配置影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>套件下載安裝與配置影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.<br/></span></p>
-<p>若使用 Solidworks 2017 版, 則將 SW2020 換為 SW2017, 其他套件 INV2020 代表 AutoDesk Inventor 2020 版, 還有 Onshape 與 Solvespace 等套件名稱.</p>
-<br />Onshape 繪圖 << <a href='Onshape 繪圖.html'>Previous</a> <a href='CAD2 操作流程.html'>Next</a> >> CAD2 操作流程</div>
+<p>若使用 Solidworks 2017 版, 則將 SW2020 換為 SW2017, 其他套件 INV2020 代表 AutoDesk Inventor 2020 版, 還有 Onshape 與 Solvespace 等套件名稱.</p><br />Onshape 繪圖 << <a href='Onshape 繪圖.html'>Previous</a> <a href='CAD2 操作流程.html'>Next</a> >> CAD2 操作流程</div>
         
     <!-- footer -->
       <div class="container">
