--- a/config/content.htm
+++ b/config/content.htm
@@ -362,13 +362,13 @@ end</pre>
 <p>CAD2 套件下載安裝與配置影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>套件下載安裝與配置影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.<br/></span></p>
 <p>若使用 Solidworks 2017 版, 則將 SW2020 換為 SW2017, 其他套件 INV2020 代表 AutoDesk Inventor 2020 版, 還有 Onshape 與 Solvespace 等套件名稱.</p>
 <p></p>
-<p>Onshape 使用方法: <a href="https://www.youtube.com/watch?v=6tAS4hV2ETI">https://www.youtube.com/watch?v=6tAS4hV2ETI</a></p><h3>CAD2 操作流程</h3>
-<p>CAD2 指各學員所分配到的第二套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</p>
+<p>Onshape 使用方法: <a href="https://www.youtube.com/watch?v=6tAS4hV2ETI">https://www.youtube.com/watch?v=6tAS4hV2ETI</a></p><h3>Onshape 操作流程</h3>
+<p>零組件繪圖教學影片 (照以上影片操作):個零件都先以CAD先描繪過一次，再轉成DXF檔，再以Onshape打開圖檔，並且長料，就完成了此零件。</p>
+<p>  如果遇到零件無法長料，就代表此圖並沒有封閉，可一個一個部分檢查，但會消耗較多時間，或者也可以直接在上面多描一次</p>
 <p>CAD2 零組件繪圖操作流程影片 (Youtube)</p>
 <p>CAD2 零組件繪圖教學影片 (Wink)</p>
 <p>CAD2 零組件繪圖教學影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>零組件繪圖教學影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.<br/></span></p>
-<p>若使用 Solidworks 2017 版, 則將 SW2020 換為 SW2017, 其他套件 INV2020 代表 AutoDesk Inventor 2020 版, 還有 Onshape 與 Solvespace 等套件名稱.</p>
-<h2>運動場景</h2>
+<p>若使用 Solidworks 2017 版, 則將 SW2020 換為 SW2017, 其他套件 INV2020 代表 AutoDesk Inventor 2020 版, 還有 Onshape 與 Solvespace 等套件名稱.</p><h2>運動場景</h2>
 <h4>CAD1:</h4>
 <p style="padding-left: 30px;">CAD1 零件轉出後轉入 CoppeliaSim 操作影片 (Youtube)</p>
 <p style="padding-left: 30px;">CAD1 零件轉入 CoppeliaSim 教學影片 (Wink)</p>
