--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -386,11 +386,11 @@ end</pre>
 <p>3D零件檔案(inventor):</p>
 <p>影片:</p>
 <p><a href="https://www.youtube.com/watch?v=WcgBfZCOkEQ">https://www.youtube.com/watch?v=WcgBfZCOkEQ</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="600" src="//www.youtube.com/embed/WcgBfZCOkEQ" width="800"></iframe></p>
 <p><a href="https://youtu.be/_J8cbSAUAD8">https://youtu.be/_J8cbSAUAD8</a>(轉動影片)</p>
 <p>(因為要看清楚有插銷，所以影片裡故意讓它突出一塊)</p>
 <p></p>
-<p></p>
-<h1>期末考</h1>
+<p></p><h1>期末考</h1>
 <p>心得:</p>
 <p>  這學期碰觸到了些新的繪圖程式，而我被分配到的是onshape還有inventor，簡單的繪圖就像下面影片所做，onshape的話可直接畫在同一個圖檔接下來直接在裡面組裝即可。inventor的話，需新創一個組合件，再把要用零件全部匯入即可組裝。</p>
 <p>  接下來思考各軸與各軸的運動關係，然後想辦法讓他做動，還有直線運動、旋轉運動等等，onshape我是用圓柱結合和平面結合所去組成，inventor則是用約束裡面的貼合和插入去組，過程非常困難，但是組起來可以說很有成就感。</p>
@@ -415,8 +415,7 @@ var winkVideoData = {
 };
 </script>
 <div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="/static" data-varname="winkVideoData" height="756" video="" width="1344">
-<source src="/downloads/123.mp4" type="video/mp4"/>
-</video>
+<source src="https://40923226.github.io/cad2021_hw/downloads/123.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
