--- a/content/W11(H2).html
+++ b/content/W11(H2).html
@@ -147,11 +147,12 @@ img.add_border {
 <p>3D零件檔案(inventor):</p>
 <p>影片:</p>
 <p><a href="https://www.youtube.com/watch?v=WcgBfZCOkEQ">https://www.youtube.com/watch?v=WcgBfZCOkEQ</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="600" src="//www.youtube.com/embed/WcgBfZCOkEQ" width="800"></iframe></p>
 <p><a href="https://youtu.be/_J8cbSAUAD8">https://youtu.be/_J8cbSAUAD8</a>(轉動影片)</p>
+<p><iframe allowfullscreen="allowfullscreen" height="600" src="//www.youtube.com/embed/_J8cbSAUAD8" width="800"></iframe></p>
 <p>(因為要看清楚有插銷，所以影片裡故意讓它突出一塊)</p>
 <p></p>
-<p></p>
-<br />運動場景 << <a href='運動場景.html'>Previous</a> <a href='期末考.html'>Next</a> >> 期末考</div>
+<p></p><br />運動場景 << <a href='運動場景.html'>Previous</a> <a href='期末考.html'>Next</a> >> 期末考</div>
         
     <!-- footer -->
       <div class="container">
