--- a/content/期末考延伸題.html
+++ b/content/期末考延伸題.html
@@ -140,15 +140,14 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">期末考 << <a href='期末考.html'>Previous</a> <a href='Wink(W13).html'>Next</a> >> Wink(W13)<br /><h1>期末考延伸題</h1>
-<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
-<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
-<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
-<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
-<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
-<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
-<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
-<div class="winkVideoControlBarProgressThumbClass"><strong>coppeliasim wink</strong></div>
-<div class="winkVideoPlayOverlayClass"></div>
+<p>期末零件檔：<a href="https://drive.google.com/drive/folders/1JYKKdiOHVzTR8SJaAc1mNlDM9UagbAoz?usp=sharing">https://drive.google.com/drive/folders/1JYKKdiOHVzTR8SJaAc1mNlDM9UagbAoz?usp=sharing</a></p>
+<p>繪圖過程:</p>
+<p><a href="https://www.youtube.com/watch?v=gJJvBSnFo54">https://www.youtube.com/watch?v=gJJvBSnFo54</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="600" src="//www.youtube.com/embed/gJJvBSnFo54" width="800"></iframe></p>
+<p>組裝影片:</p>
+<p><a href="https://youtu.be/DXMQdJ_SAWE">https://youtu.be/DXMQdJ_SAWE</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="600" src="//www.youtube.com/embed/DXMQdJ_SAWE" width="800"></iframe></p>
+<p>---------------------------------------------------------------------------------------------------------------</p>
 <script>
 var winkVideoData = {
 dataVersion: 1,
