--- a/config/content.htm
+++ b/config/content.htm
@@ -472,8 +472,11 @@ frameStops: {
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
 <div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
-<div class="winkVideoControlBarProgressRightClass"></div>
 <h1>機械手臂</h1>
+<p><br/><img alt="" height="1021" src="/images/零件圖.png" width="1920"/>機械手臂</p>
+<p>組裝過程:</p>
+<p><a href="https://youtu.be/1HYwdx2k0yM">https://youtu.be/1HYwdx2k0yM</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="600" src="//www.youtube.com/embed/1HYwdx2k0yM" width="800"></iframe></p>
 <p><strong>coppeliasim wink</strong></p>
 <script>
 var winkVideoData = {
@@ -485,7 +488,7 @@ frameStops: {
 },
 };
 </script>
-<div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="/static" data-varname="winkVideoData" height="1200" width="800">
+<div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="/static" data-varname="winkVideoData" height="800" width="1200">
 <source src="./../downloads/12.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
