--- a/content/機械手臂.html
+++ b/content/機械手臂.html
@@ -140,6 +140,10 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">期末考延伸題 << <a href='期末考延伸題.html'>Previous</a> <a href='Wink(W13).html'>Next</a> >> Wink(W13)<br /><h1>機械手臂</h1>
+<p><br/><img alt="" height="1021" src="./../images/零件圖.png" width="1920"/>機械手臂</p>
+<p>組裝過程:</p>
+<p><a href="https://youtu.be/1HYwdx2k0yM">https://youtu.be/1HYwdx2k0yM</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="600" src="//www.youtube.com/embed/1HYwdx2k0yM" width="800"></iframe></p>
 <p><strong>coppeliasim wink</strong></p>
 <script>
 var winkVideoData = {
@@ -151,7 +155,7 @@ frameStops: {
 },
 };
 </script>
-<div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="1200" width="800">
+<div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="800" width="1200">
 <source src="./../downloads/12.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
